<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewAllStreamsActivity" >

    <GridView 
    	android:id="@+id/all_stream_gridview"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:columnWidth="100dp"
    	android:numColumns="4"
    	android:verticalSpacing="10dp"
    	android:horizontalSpacing="10dp"
    	android:stretchMode="columnWidth"
    	android:gravity="center"
	/>
    <EditText
        android:id="@+id/all_stream_search_edittext"
        android:layout_width="150dp"
        android:layout_height="wrap_content" 
        android:gravity="left"
        android:horizontalSpacing="30dp"
        android:verticalSpacing="10dp"
        android:layout_below="@id/all_stream_gridview" 
        android:inputType="text"/>
    <Button
        android:id="@+id/all_stream_search_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/all_stream_gridview" 
        android:layout_toRightOf="@id/all_stream_search_edittext"
        android:text="@string/search"
        android:onClick="searchSpecified"
        />
    <Button
        android:id="@+id/all_stream_nearby_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:verticalSpacing="30dp"
        android:layout_below="@id/all_stream_search_edittext"
        android:text="@string/nearby"
        android:onClick="searchNearby"
        />
    <Button
        android:id="@+id/all_stream_subscribed_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:verticalSpacing="10dp"
        android:layout_below="@id/all_stream_nearby_button"
        android:text="@string/subscribe"
        android:onClick="gotoSubscribed"
        />

</RelativeLayout>
